# otus1

./: CMakeLists.txt  README.md  build.sh  main.cpp  test_version.cpp  version.cpp  version.h.in
.github/workflows/: release.yml
